# RecipeBox

./: README.md  pyproject.toml
recipe/: decorators.py  forms.py  models.py  settings.py  urls.py  views.py
recipe/migrations/: 0001_initial.py  0002_recipes_ingredients.py  0003_author_favorites.py  0004_auto_20200302_2251.py
recipe/templates/: addAuthor.html  addRecipe.html  base.html  dnu.html  navbar.html
recipe/templates/recipes/: author.html  detail.html  index.html  login.html  register.html  style.css
