[tool.poetry]
name = "KRecipes"
version = "0.1.0"
description = "Keto Recipes"
authors = ["Imraj423 <dahqniss@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.1"
django = "^3.0.2"
django-crispy-forms = "^1.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
